--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -42,7 +42,7 @@
 
   <div class="container-fluid">
 
-    <h1 id="Menu-button"> Our Menu </h1>
+    <h1 class="text-center" id="Menu-button"> Our Menu </h1>
 
     <div class="main-wrapper">
         <div class="col-xs-12 col-sm-6 col-md-4">
