--- a/mod5_solution/index.html
+++ b/mod5_solution/index.html
@@ -71,7 +71,7 @@
   </div>
   <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
 
-  <div id="main-content" class="container"></div>   <!-- paste the baked html inside this div -->
+  <div id="main-content" class="container"></div>
 
   <footer class="panel-footer">
     <div class="container">
